# frogkill

./: CMakeLists.txt  CMakePresets.json  README.md
build-clang/: CMakeCache.txt  Makefile  cmake_install.cmake  frogkill  frogkill-helper  install_manifest.txt
helper/: main.cpp
install/: gnome_shortcut.sh
install/autostart/: frogkill.desktop
install/polkit/: org.frogkill.helper.policy
install/systemd-user/: frogkill.service
scripts/: build.sh  build_clang_lld.sh
src/: app_controller.cpp  app_controller.h  main.cpp  main_window.cpp  main_window.h  process_model.cpp  process_model.h  procfs.cpp  procfs.h  system_sampler.cpp  system_sampler.h  util.cpp  util.h
toolchains/: clang-lld.cmake
